<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".ChatActivity">

    <include
        android:id="@+id/chat_bar_layout"
        layout="@layout/app_bar_layout"></include>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_list_of_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/myLinearLayout"
        android:layout_below="@+id/chat_bar_layout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/myLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/send_image_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/select_image_for_message"/>

        <EditText
            android:id="@+id/input_message"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="Write Message Here..." />

        <ImageButton
            android:id="@+id/send_message_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/send_message"/>
    </LinearLayout>

</RelativeLayout>