<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".FindTagsActivity">

    <!--<include
        android:id="@+id/find_friends_appbar_layout"
        layout="@layout/app_bar_layout"></include>-->

    <RelativeLayout
        android:id="@+id/myLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/find_tags_appbar_layout">

        <TextView
            android:id="@+id/simpleTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:text="Search for tags!"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <EditText
            android:id="@+id/search_box_input"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_below="@+id/simpleTextID"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputs"
            android:ems="10"
            android:hint="Search here..."
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="@color/design_default_color_primary_dark">
        </EditText>

        <ImageButton
            android:id="@+id/search_tags_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/simpleTextID"
            android:layout_toEndOf="@+id/search_box_input"
            android:background="@drawable/inputs"
            android:src="@drawable/search">
        </ImageButton>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/myLayout"
        android:layout_margin="10dp">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>